@@ -4,6 +4,9 @@
     * 4092 FIX: if.include: fixed wrong calculated number of interfaces which are up in case of interface groups
     * 4093 FIX: oracle_tablespaces: Werk 3907 broke the space calculation...
 
+    Multisite:
+    * 4072 FIX: Fixed multiple issues in BI availability when groups or names contain umlauts
+
 
 1.2.8p14:
     Checks & Agents:
